chore: fix images and spacings

--- a/assets/scss/base/reset.scss
+++ b/assets/scss/base/reset.scss
@@ -33,7 +33,7 @@ body {
 	line-height: 1;
   font-weight: 400;
   font-style: normal;
-	width: 100vw;
+	width: 100%;
 }
 ol, ul {
 	list-style: none;
